<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/FondoEtereo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn1"
            style="@style/BotonEtereo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="110dp" />

        <EditText
            android:id="@+id/editT1"
            style="@style/EditTextEtereo" android:layout_width="200dp"
            android:layout_height="48dp"
            android:hint="@string/ingresa_texto"
            android:autofillHints="@string/ingresa_texto"
            android:contentDescription="@string/ingresa_texto1"
            android:ems="10"
            android:inputType="text"
            android:text="@string/ingresa_texto"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="227dp"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextoPrincipalEtereo" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_app_de_prueba"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <CheckBox
            android:id="@+id/chkbox1"
            style="@style/CheckboxEtereo" android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/click"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="171dp" />

        <CalendarView
            android:id="@+id/calendar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="287dp" />

        <ImageButton
            android:id="@+id/imgButton1"
            style="@style/ImageButtonPastel"
            android:layout_width="105dp"
            android:layout_height="118dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/checkbox_on_background"
            android:scaleX="2.5"
            android:scaleY="2.5" />

    </LinearLayout>

</RelativeLayout>